@@ -31,7 +31,7 @@ ops_arith
 ops_comp
 ops_maxmin
 ops_plusminus
-ops_multdiv
+ops_mult
 ops_set
 randtest
 refcount
