@@ -30,7 +30,7 @@ noinst_PROGRAMS = \
     ops_comp \
     ops_maxmin \
     ops_plusminus \
-    ops_multdiv \
+    ops_mult \
     ops_set \
     refcount \
     sat_test \
@@ -94,13 +94,13 @@ TESTS = \
     ops_plusminus.--rel.--EVp.--long._sh \
     ops_plusminus.--rel.--EVs.--float._sh \
     \
-    ops_multdiv.--set.--MT.--int._sh \
-    ops_multdiv.--set.--MT.--float._sh \
-    ops_multdiv.--set.--EVp.--long._sh \
-    ops_multdiv.--rel.--MT.--int._sh \
-    ops_multdiv.--rel.--MT.--float._sh \
-    ops_multdiv.--rel.--EVp.--long._sh \
-    ops_multdiv.--rel.--EVs.--float._sh \
+    ops_mult.--set.--MT.--int._sh \
+    ops_mult.--set.--MT.--float._sh \
+    ops_mult.--set.--EVp.--long._sh \
+    ops_mult.--rel.--MT.--int._sh \
+    ops_mult.--rel.--MT.--float._sh \
+    ops_mult.--rel.--EVp.--long._sh \
+    ops_mult.--rel.--EVs.--float._sh \
     \
     ops_set.--set._sh \
     ops_set.--rel._sh \
@@ -219,25 +219,25 @@ ops_plusminus.--rel.--EVs.--float._sh: buildWrapper.sh
 
 ###########################################
 
-ops_multdiv.--set.--MT.--int._sh: buildWrapper.sh
+ops_mult.--set.--MT.--int._sh: buildWrapper.sh
 	./buildWrapper.sh $@
 
-ops_multdiv.--set.--MT.--float._sh: buildWrapper.sh
+ops_mult.--set.--MT.--float._sh: buildWrapper.sh
 	./buildWrapper.sh $@
 
-ops_multdiv.--set.--EVp.--long._sh: buildWrapper.sh
+ops_mult.--set.--EVp.--long._sh: buildWrapper.sh
 	./buildWrapper.sh $@
 
-ops_multdiv.--rel.--MT.--int._sh: buildWrapper.sh
+ops_mult.--rel.--MT.--int._sh: buildWrapper.sh
 	./buildWrapper.sh $@
 
-ops_multdiv.--rel.--MT.--float._sh: buildWrapper.sh
+ops_mult.--rel.--MT.--float._sh: buildWrapper.sh
 	./buildWrapper.sh $@
 
-ops_multdiv.--rel.--EVp.--long._sh: buildWrapper.sh
+ops_mult.--rel.--EVp.--long._sh: buildWrapper.sh
 	./buildWrapper.sh $@
 
-ops_multdiv.--rel.--EVs.--float._sh: buildWrapper.sh
+ops_mult.--rel.--EVs.--float._sh: buildWrapper.sh
 	./buildWrapper.sh $@
 
 ###########################################
@@ -338,8 +338,8 @@ ops_maxmin_LDADD = ../src/libmeddly.la
 ops_plusminus_SOURCES = ops_plusminus.cc randomize.cc
 ops_plusminus_LDADD = ../src/libmeddly.la
 
-ops_multdiv_SOURCES = ops_multdiv.cc randomize.cc
-ops_multdiv_LDADD = ../src/libmeddly.la
+ops_mult_SOURCES = ops_mult.cc randomize.cc
+ops_mult_LDADD = ../src/libmeddly.la
 
 ops_set_SOURCES = ops_set.cc randomize.cc
 ops_set_LDADD = ../src/libmeddly.la
